name:                dyckword
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/dyckword#readme
license:             BSD3
license-file:        LICENSE
author:              Johannes Hildén
maintainer:          johannes@isomorphic.co
copyright:           2017 Johannes Hildén
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Math.DyckWord.Binary
  build-depends:       base >= 4.7 && < 5
                     , text
                     , exact-combinatorics
  default-language:    Haskell2010

Test-Suite dyckword-testsuite
  hs-source-dirs:      tests
  Type:                exitcode-stdio-1.0
  Main-is:             Suite.hs
  Build-depends:       base
                     , dyckword
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/dyckword
