name:                dyckword
version:             0.1.0.1
synopsis:            A library for working with binary Dyck words.
description:
    The binary Dyck language consists of all strings of evenly balanced left 
    and right parentheses, brackets, or some other symbols, together with the 
    /empty/ word. Words in this language are known as /Dyck words/, some 
    examples of which are @()()()@, @(())((()))@, and @((()()))()@.
    .
    Dyck words must satisfy two conditions:
    .
      * The number of left brackets must be the same as the number of right 
        brackets.
    .
      * Going from left to right, for each character read, the total number of 
        right brackets visited must be less than or equal to the number of left 
        brackets up to the current position.

homepage:            https://github.com/githubuser/dyckword#readme
license:             BSD3
license-file:        LICENSE
author:              Johannes Hildén
maintainer:          johannes@isomorphic.co
copyright:           2017 Johannes Hildén
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Math.DyckWord.Binary
                     , Math.DyckWord.Binary.Internal
  build-depends:       base >= 4.7 && < 5
                     , text
                     , exact-combinatorics
  default-language:    Haskell2010

Test-Suite dyckword-testsuite
  hs-source-dirs:      tests
  Type:                exitcode-stdio-1.0
  Main-is:             Suite.hs
  Build-depends:       base
                     , hspec
                     , dyckword
                     , text
                     , ansi-terminal
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/dyckword
